# Oop_6

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_students.xml  test_students_invalid.xml
json/: test_students.json  test_students_invalid.json
src/: individual.py
test/: test_individual.py
